# worldcoin-experiments

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md
docs/: Profiling.md
docs/report/: .gitignore  main.tex  report.bib
iris-aby3/: Cargo.toml
iris-aby3/benches/: iris.rs
iris-aby3/examples/: aby3.rs  run_aby3.sh
iris-aby3/src/: error.rs  lib.rs  prelude.rs
iris-aby3/src/aby3/: ashare.rs  binary_trait.rs  bshare.rs  mod.rs  network.rs  protocol.rs  share.rs  utils.rs
iris-aby3/src/aby3/random/: prf.rs
iris-aby3/src/commitment/: mod.rs
iris-aby3/src/iris/: protocol.rs
iris-aby3/src/swift3/: mod.rs  network.rs  protocol.rs  share.rs
iris-aby3/src/swift3/random/: prf.rs
iris-aby3/src/tests/: aby_config.rs  iris.rs  iris_aby3.rs  iris_config.rs  mod.rs  network.rs  network_swift3.rs  network_tests.rs
iris-aby3/src/tests/certs/: cert0.der  cert1.der  cert2.der  key0.der  key1.der  key2.der
iris-aby3/src/traits/: mod.rs  mpc_trait.rs  network_trait.rs  security.rs  test_network.rs
iris-aby3/src/types/: bit.rs  int_ring.rs  mod.rs  ring_element.rs  sharable.rs
iris-mpc/: Cargo.toml
iris-mpc/benches/: internals.rs  iris.rs  iris_aby3.rs  iris_aby3_mal.rs  iris_spdzwise.rs  iris_swift3.rs
iris-mpc/examples/: aby3.rs  aby3_mal.rs  config.yaml  profile_aby3.sh  profile_spdzwise.sh  run_aby3.sh  run_aby3_mal.sh  run_spdzwise.sh  run_swift3.sh  spdzwise.rs  swift3.rs
iris-mpc/src/: error.rs  lib.rs  prelude.rs
iris-mpc/src/aby3/: id.rs  mod.rs  network.rs  protocol.rs  share.rs  utils.rs  vecshare.rs
iris-mpc/src/aby3/random/: mod.rs  prf.rs
iris-mpc/src/aby3_mal/: protocol.rs
iris-mpc/src/commitment/: mod.rs
iris-mpc/src/dzkp/: and_proof.rs  dot_proof.rs  gf2p64.rs  irreducible_polys.rs  mod.rs  mul_proof.rs  polynomial.rs
iris-mpc/src/iris/: protocol.rs
iris-mpc/src/spdzwise/: mod.rs  protocol.rs  share.rs  triples.rs  vecshare.rs
iris-mpc/src/swift3/: mod.rs  protocol.rs  share.rs  vecshare.rs
iris-mpc/src/swift3/random/: prf.rs
iris-mpc/src/tests/: iris_aby3.rs  iris_aby3_mal.rs  iris_spdzwise.rs  iris_swift3.rs  mod.rs  network_aby3.rs  network_aby3_mal.rs  network_spdzwise.rs  network_swift3.rs
iris-mpc/src/traits/: binary_trait.rs  mod.rs  mpc_trait.rs  network_trait.rs  share_trait.rs  test_network.rs
iris-mpc/src/types/: Readme.md  bit.rs  int_ring.rs  mod.rs  ring_element.rs  sharable.rs
mpc-net/: Cargo.toml
mpc-net/examples/: three_party_custom_channels.rs  three_party_managed.rs
mpc-net/src/: channel.rs  codecs.rs  config.rs  lib.rs
plain-reference/: Cargo.toml
plain-reference/benches/: iriscode.rs
plain-reference/src/: lib.rs
sage/: zk_mpc.sage  zk_mpc_and.sage  zk_mpc_dot.sage
