[workspace]
members = ["plain-reference", "mpc-net", "iris-aby3"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.66"
authors = ["TACEO GmbH <hello@taceo.io>"]
description = "Experiments for WorldCoin"
readme = "./README.md"
homepage = "www.taceo.io"
repository = "https://github.com/TaceoLabs/worldcoin-experiments"
license = "MIT OR Apache-2.0"
publish = ["taceo"]

[workspace.dependencies]
bytes = "1.5.0"
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.29"
quinn = "0.10.2"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.24"
