[workspace]
members = ["plain-reference", "mpc-net", "iris-mpc"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
authors = ["TACEO GmbH <hello@taceo.io>"]
description = "Experiments for WorldCoin Iris Matching in MPC"
readme = "./README.md"
homepage = "www.taceo.io"
repository = "https://github.com/TaceoLabs/worldcoin-experiments"
license = "MIT OR Apache-2.0"
publish = ["taceo"]

[workspace.dependencies]
bytes = "1.5.0"
bincode = "1.3.3"
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.2"
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3.29"
quinn = "0.10.2"
rand = { version = "0.8.5" }
rand_chacha = "0.3"
rcgen = "0.12"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
thiserror = "1.0.24"
tokio = { version = "1.34.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "io-util",
    "macros",
] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = { version = "0.1.40", features = ["release_max_level_warn"] }

[profile.release]
lto = "thin"
codegen-units = 1

[profile.profiling]
inherits = "bench"
debug = true
lto = "thin"
