[package]
name = "iris-aby3"
version = "0.1.0"
description = "ABY3 implementation of the privacy-preserving iris matching protocol."
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
