[package]
name = "iris-aby3"
version = "0.1.0"
description = "ABY3 implementation of the privacy-preserving iris matching protocol."
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
mpc-net = { path = "../mpc-net" }
num-traits = "0.2"
quinn = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serial_test = "2.0"
