[package]
name = "mpc-net"
version = "0.1.0"
edition = "2021"
exclude = ["data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.29"
quinn = "0.10.2"
rcgen = "0.11.3"
rustls = { version = "0.21.9", features = ["quic", "dangerous_configuration"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "net", "sync", "time", "io-util", "macros"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
