[package]
name = "mpc-net"
version = "0.1.0"
exclude = ["data"]
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
futures = "0.3.29"
quinn = "0.10.2"
rcgen = "0.11.3"
rustls = { version = "0.21.9", features = ["quic", "dangerous_configuration"] }
serde = { workspace = true }
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "io-util",
    "macros",
] }
tokio-util = { version = "0.7.10", features = ["codec"] }
